Completing the dashboard

--- a/user-side/dashboard/index.html
+++ b/user-side/dashboard/index.html
@@ -72,26 +72,51 @@
                         <div class="blok">
                               <i class="fa fa-money"></i>
                               <div class="no">
-                                    <p>Total Points</p>
-                                    <p id="total-points">3</p>
+                                    <p>Current Points</p>
+                                    <p id="current-points"></p>
                               </div>
                         </div>
 
                         <div class="blok">
                               <i class="fa fa-money kl"></i>
                               <div class="no">
-                                    <p>Total Fines</p>
-                                    <p id="total-fines">5</p>
+                                    <p>Initial Points</p>
+                                    <p id="initial-points"></p>
                               </div>
                         </div>
 
                         <div class="blok">
                               <i class="fa fa-money pl"></i>
                               <div class="no">
-                                    <p>Total Complaints</p>
-                                    <p id="total-complaints">4</p>
+                                    <p>Remaining Points</p>
+                                    <p id="remaining-points"></p>
                               </div>
                         </div>
+
+                        <div class="blok">
+                              <i class="fa fa-money"></i>
+                              <div class="no">
+                                    <p>Max Point Limit</p>
+                                    <p id="max-point-limit"></p>
+                              </div>
+                        </div>
+
+                        <div class="blok">
+                              <i class="fa fa-money kl"></i>
+                              <div class="no">
+                                    <p>Min Point Limit</p>
+                                    <p id="min-point-limit"></p>
+                              </div>
+                        </div>
+
+                        <div class="blok">
+                              <i class="fa fa-money pl"></i>
+                              <div class="no">
+                                    <p>Max Recovery Date</p>
+                                    <p id="max-recovery-date"></p>
+                              </div>
+                        </div>
+
                         <div class="clear"></div>
                         <div class="gains">
                               <canvas id="myChart"></canvas>
