Basic point system architecture done

--- a/user-side/dashboard/index.html
+++ b/user-side/dashboard/index.html
@@ -72,6 +72,30 @@
                         <div class="blok">
                               <i class="fa fa-money"></i>
                               <div class="no">
+                                    <p>Max Point Limit</p>
+                                    <p id="max-point-limit">12</p>
+                              </div>
+                        </div>
+
+                        <div class="blok">
+                              <i class="fa fa-money kl"></i>
+                              <div class="no">
+                                    <p>Min Point Limit</p>
+                                    <p id="min-point-limit">0</p>
+                              </div>
+                        </div>
+
+                        <div class="blok">
+                              <i class="fa fa-money pl"></i>
+                              <div class="no">
+                                    <p>Initial Points</p>
+                                    <p id="initial-points">12</p>
+                              </div>
+                        </div>
+
+                        <div class="blok">
+                              <i class="fa fa-money"></i>
+                              <div class="no">
                                     <p>Current Points</p>
                                     <p id="current-points"></p>
                               </div>
@@ -80,32 +104,8 @@
                         <div class="blok">
                               <i class="fa fa-money kl"></i>
                               <div class="no">
-                                    <p>Initial Points</p>
-                                    <p id="initial-points"></p>
-                              </div>
-                        </div>
-
-                        <div class="blok">
-                              <i class="fa fa-money pl"></i>
-                              <div class="no">
                                     <p>Remaining Points</p>
                                     <p id="remaining-points"></p>
-                              </div>
-                        </div>
-
-                        <div class="blok">
-                              <i class="fa fa-money"></i>
-                              <div class="no">
-                                    <p>Max Point Limit</p>
-                                    <p id="max-point-limit"></p>
-                              </div>
-                        </div>
-
-                        <div class="blok">
-                              <i class="fa fa-money kl"></i>
-                              <div class="no">
-                                    <p>Min Point Limit</p>
-                                    <p id="min-point-limit"></p>
                               </div>
                         </div>
 
