--- a/police/igp/updatePoliceman.html
+++ b/police/igp/updatePoliceman.html
@@ -64,7 +64,7 @@
                 <div class="form-header">
                     <h2>Update Policeman Details</h2>
                 </div>
-                <form action="#" id="form" class="form">
+                <form action="#" id="form" class="form" enctype="multipart/form-data">
                     <div class="form-control">
                         <label for="name">Name</label>
                         <input type="text" placeholder="eg: Suraif Muhammad" id="name" value="" />
@@ -117,6 +117,20 @@
                             <i class="fa-solid fa-circle-exclamation"></i>
                         </div>
                         <small>Error message</small>
+                    </div>
+                    <div class="form-control">
+                        <label for="gradeOptions">Grade: </label>
+                        <div class="options" id="gradeOptions">
+                            <div class="hide-option option" id="hide-gradeOption">Select the Grade</div>
+                        </div>
+                        <small>Error message</small>
+                    </div>
+                    <div>
+                        <label for="profile_picture">Profile Picture</label>
+                        <input type="file" id="profile_picture" name="profile_picture" accept="image/png, image/jpeg, image/jpg"> <!--Accepts only the file formats png,jpeg,jpg-->
+                        <!-- <i class="fa-regular fa-circle-check"></i>
+                        <i class="fa-solid fa-circle-exclamation"></i>
+                        <small>Error message</small> -->
                     </div>
                     <button id="button">Update</button>
                 </form>
