Adding profile pictures to profile page

--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -76,38 +76,39 @@
     </div>
     <!-- REPEATING -->
 
-        <div class="container">
-            <h1>User Profile</h1>
-            <div class="scroll"
-                 id="profile-data-container">
-                <div class="profile-data-row">
-                    <div class="profile-data-card personal-info-card"
-                         id="personal-info-card">
-                        <div class="img-container">
-                            <img src="../../resources/images/Account.png"
-                                 alt="Account">
-                            <div class="profile-username"
-                                 id="profile-username">
-                            </div>
+    <div class="container">
+        <h1>User Profile</h1>
+        <div class="scroll"
+             id="profile-data-container">
+            <div class="profile-data-row">
+                <div class="profile-data-card personal-info-card"
+                     id="personal-info-card">
+                    <div class="img-container">
+                        <img src="../../resources/images/avishi.jpeg"
+                             alt="Account"
+                             id="big-profile-picture">
+                        <div class="profile-username"
+                             id="profile-username">
                         </div>
                     </div>
-                    <div class="profile-data-card"
-                         id="user-info-card">
-                        <h2>User Info</h2>
-                    </div>
                 </div>
-                <div class="profile-data-row">
-                    <div class="profile-data-card"
-                         id="driver-info-card">
-                        <h2>Driver Info</h2>
-                    </div>
-                    <div class="profile-data-card"
-                         id="vehicle-info-card">
-                        <h2>Vehicle Info</h2>
-                    </div>
+                <div class="profile-data-card"
+                     id="user-info-card">
+                    <h2>User Info</h2>
+                </div>
+            </div>
+            <div class="profile-data-row">
+                <div class="profile-data-card"
+                     id="driver-info-card">
+                    <h2>Driver Info</h2>
+                </div>
+                <div class="profile-data-card"
+                     id="vehicle-info-card">
+                    <h2>Vehicle Info</h2>
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
 
 </html>
