Add correct relative paths from complaint feature

--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -70,7 +70,7 @@
     <!-- Dashboard heading -->
     <div class="dashboard-heading">
         <div class="panel">
-            <a href="../../user/profile/index.html"
+            <a href="../../profile/index.html"
                class="profile-username-nav"
                id="profile-username">
             </a>
