Changes in html, css

--- a/user-side/user/fines/index.html
+++ b/user-side/user/fines/index.html
@@ -77,23 +77,25 @@
     <!-- Fines table -->
     <div class="container">
         <h1>Fines Details</h1>
-        <div class="tableSection">
+        <div class="scroll">
+            <div class="tableSection">
 
-            <!-- Driver fines table -->
-            <table class="fines-table"
-                   id="table-driver">
-            </table>
+                <!-- Driver fines table -->
+                <table class="fines-table"
+                       id="table-driver">
+                </table>
 
-            <!-- Vehicle fines table -->
-            <table class="fines-table"
-                   id="table-vehicle">
-            </table>
+                <!-- Vehicle fines table -->
+                <table class="fines-table"
+                       id="table-vehicle">
+                </table>
 
-            <!-- Pedestrian fines table -->
-            <table class="fines-table"
-                   id="table-pedestrian">
-                <tbody>
-            </table>
+                <!-- Pedestrian fines table -->
+                <table class="fines-table"
+                       id="table-pedestrian">
+                    <tbody>
+                </table>
+            </div>
         </div>
     </div>
     </div>
