--- a/user-side/user/login/index.html
+++ b/user-side/user/login/index.html
@@ -27,67 +27,69 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="ntsflogoDiv">
-            <img src="../../../resources/images/logo_NTSF.png"
-                 alt="ntsflogo"
-                 id="ntsflogo">
-        </div>
-        <div class="title">
-            <h2>
-                <b>National Traffic Spot Fine System</b>
-            </h2>
-        </div>
-
-        <a href="../../common/profile/index.html">
-        </a>
-    </div>
-
-    <div class="wrapper">
-        <form class="login"
-              id="login-form"
-              oninput="validateLoginForm()"
-              onsubmit="submitLogin(); return false">
-
-            <p class="title">Login</p>
-
-            <!-- NIC -->
-            <div class="form-control">
-                <input type="text"
-                       id="nic"
-                       placeholder="NIC"
-                       autofocus />
-                <i class="fa fa-user"></i>
-                <small>Error message</small>
-
-                <div id="password-container">
-                    <!-- Password -->
-                    <input type="password"
-                           id="password"
-                           placeholder="Password"
-                           autofocus />
-                    <i class="fa fa-key"></i><br>
-                    <small>Error message</small>
-
-                    <!-- Toggle Password -->
-                    <span id="toggleEye"
-                          onclick="togglePasswordVisibility()">
-                        <i class="fas fa-eye"></i>
-                    </span>
-                </div>
+    <div class="body-container">
+        <div class="header">
+            <div class="ntsf-logo-wrapper">
+                <img src="../../../resources/images/logo_NTSF.png"
+                     alt="ntsflogo"
+                     id="ntsflogo">
+            </div>
+            <div class="title">
+                <h2>
+                    <b>National Traffic Spot Fine System</b>
+                </h2>
             </div>
 
-            <a href="#">Forgot your password?</a><br><br>
-            <!-- Don't have an account? <a href="../signup/index.html">Sign Up</a> -->
-            <a href="../signup/index.html">Sign Up</a>
+            <a href="../../common/profile/index.html">
+            </a>
+        </div>
 
-            <!-- Submit Button -->
-            <button id="submit-btn"
-                    disabled>
-                <i class="spinner"></i>
-                <span class="state">Log In</span>
-            </button>
-        </form>
+        <div class="wrapper">
+            <form class="login"
+                  id="login-form"
+                  oninput="validateLoginForm()"
+                  onsubmit="submitLogin(); return false">
+
+                <p class="title">Login</p>
+
+                <!-- NIC -->
+                <div class="form-control">
+                    <input type="text"
+                           id="nic"
+                           placeholder="NIC"
+                           autofocus />
+                    <i class="fa fa-user"></i>
+                    <small>Error message</small>
+
+                    <div id="password-container">
+                        <!-- Password -->
+                        <input type="password"
+                               id="password"
+                               placeholder="Password"
+                               autofocus />
+                        <i class="fa fa-key"></i><br>
+                        <small>Error message</small>
+
+                        <!-- Toggle Password -->
+                        <span id="toggleEye"
+                              onclick="togglePasswordVisibility()">
+                            <i class="fas fa-eye"></i>
+                        </span>
+                    </div>
+                </div>
+
+                <a>Forgot your password?</a><br><br>
+                <!-- Don't have an account? <a href="../signup/index.html">Sign Up</a> -->
+                <a href="../signup/index.html">Sign Up</a>
+
+                <!-- Submit Button -->
+                <button id="submit-btn"
+                        disabled>
+                    <i class="spinner"></i>
+                    <span class="state">Log In</span>
+                </button>
+            </form>
+        </div>
     </div>
 </body>
 
